feat: add neighboring file detection